terraform/subnet.tf
resource "aws_subnet" "public_subnet" {
    vpc_id = aws_vpc.doccano_vpc.id
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = true
    availability_zone = "us-east-1a"
    tags = {Name = "doccano-public-subnet"}
}
